--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,13 @@ idna==2.9
 mccabe==0.6.1
 pycodestyle==2.6.0
 pycparser==2.20
+pydocstyle==5.0.2
 pyflakes==2.2.0
 pylama==7.7.1
 python-telegram-bot==12.7
-requests==2.23.0
+requests==2.7.0
+schedule==0.6.0
 six==1.15.0
 snowballstemmer==2.0.0
+tornado==6.0.4
 urllib3==1.25.9
